--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [tool:pytest]
-addopts = --alluredir=./allure-results --tb=short -v
+addopts = -v --tb=short --alluredir=./reports --dist=loadfile -n 2
 testpaths = tests
